--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p>Lorem ipsum dolor sit amet,
          consectetur adipisicing elit. Dolores praesentium magni vitae aliquam corporis libero fugiat repellat inventore distinctio animi unde illo, ea magnam numquam at? S
         it provident molestias doloribus!</p>
+    <button>This is button</button>
 </body>
 </html>
